// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders button 1`] = `
<span
  className="text text__text"
  onClick={[Function]}
>
  Test
</span>
`;

exports[`should render 1`] = `
<span
  className="text text__text"
  onClick={[Function]}
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</span>
`;
